<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_categories"
                android:icon="@drawable/ic_menu_categories"
                android:title="@string/item_categories"/>
        <item
                android:id="@+id/nav_products"
                android:icon="@drawable/ic_menu_products"
                android:title="@string/item_products"/>
        <item
                android:id="@+id/nav_car"
                android:icon="@drawable/ic_menu_car"
                android:title="@string/item_car"/>
        <item
                android:id="@+id/nav_orders"
                android:icon="@drawable/ic_menu_orders"
                android:title="@string/item_orders"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/item_logout"/>

    </group>

    <item android:title="@string/item_settings">
        <menu>
            <item
                    android:id="@+id/nav_personal_data"
                    android:icon="@drawable/ic_menu_personal_data"
                    android:title="@string/item_settings"/>

        </menu>
    </item>

</menu>
